	in read-only groups.

	* gnus-group.el (gnus-group-mark-article-read): Ditto

	* message.el (message-cite-reply-position): Doc string fix.

	* nnimap.el (nnimap-transform-headers): Simplify regexp to hopefully
	avoid regexp overflow.
	(nnimap-transform-split-mail): Ditto.

	* pop3.el (pop3-retr): Error out if the server closes the connection.

2011-05-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-urlify): Use shr-add-font to make underlines be less ugly
	at the end of lines.

2011-05-29  Julien Danjou  <julien@danjou.info>

	* smiley.el (gnus-smiley-file-types): Add gif as supported file type.

2011-05-27  Glenn Morris  <rgm@gnu.org>

	* gnus-group.el (gnus-bug-group-download-format-alist):
	Use the "maintainer" version of debian reports as well.

2011-05-26  Glenn Morris  <rgm@gnu.org>

	* gnus-group.el (gnus-bug-group-download-format-alist):
	Use the "maintainer" version of debbugs.gnu.org reports.

2011-05-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-delete-part): Fix mm-handle-filename usage.

2011-05-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-cus.el (gnus-agent-customize-category):
	* gnus-delay.el (gnus-delay-send-queue):
	* gnus.el (gnus-other-frame):
	Don't quote lambda expressions with `quote'.

2011-05-20  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sum.el (gnus-summary-hide-thread): Fix bug where moving to hide
	the thread moves us backwards and so we loop forever.

2011-05-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-bodies.el (mm-decode-content-transfer-encoding): Allow leading
	whitespace in base64 data lines.

2011-05-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-user-format-function-M):
	Use `mapconcat'.
	(gnus-registry-user-format-function-M2): Use to see the full text of
	the marks.  Make "," the mark text separator.

	* nntp.el (nntp-send-authinfo): Use the "force" token for NNTP
	authentication with auth-source.

2011-05-17  Glenn Morris  <rgm@gnu.org>
